May 12 2008

* Added gemspec. Installing friendly_id as a gem doesn't really get you
  anything at this point, since it won't work. But I'm adding this since
  Github offers gems for free. I'll make friendly_id work when installed as a
  gem soon.


April 18, 2008

* Improved code that adds an extension to the friendly_id when attempting to
  avoid name collisions. Previously identically named items in some cases
  would cause friendly_id to die a painful death, raigin an "I give up damnit!"
  error. Seriously. Sorry about that people... it should a little more
  "friendly" now.

March 13, 2008

* Added :dependent => :destroy to slug relation, as suggested by Emilio Tagua.
* Added code to avoid an error when renaming a slugged item back to a previously
  used name. In some cases this could cause your model to fail validation with
	an "invalid slug" error.
* Incorporated documentation changes suggested by Jesse Crouch and Chris Nolan.

Feb 7, 2008

* Applied patches from blog commenter "suntzu" to fix problem with model
	values were being overwritten. See:
  http://randomba.org/articles/2008/01/18/friendly_id

* Applied patch from Dan Blue to make friendly_id no longer ignore options on 
	ActiveRecordBase#find. Before, this code did not work:

	Person.find(id, :conditions => "administrator = 1", :order => "created_on DESC")

* This was because the conditions were silently dropped. Dan's patch fixes
  this for friendly_id when you're using it in "non-slugging" mode. I still
  have not fixed this for find when using slugs because this is a bit more
  complicated and I haven't had time yet. For now a commented-out failing test
  has been added as a reminder for me to FIX THIS SOON.

* Added call to options.assert_valid_keys in has_friendly_id. Thanks to
	W. Andrew Loe III for pointing out that this was missing.